# Compiler-in-C

./: CMakeLists.txt  Makefile  README.md  codigo.cstm  compiler_log.txt
include/: address_table.h  asm.h  ast.h  codegen.h  ir.h  lexer.h  logger.h  parser.h  semantic.h  utils.h
src/: address_table.c  asm.c  ast.c  codegen.c  ir.c  lexer.c  logger.c  main.c  parser.c  semantic.c  utils.c
